tests/snapshots/sfc/ts/patches__dynamic_asset_url_with_import_meta_url.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const getBrandLogoUrl = (type, theme) => {
  return new URL(`../../assets/logos/brand_${type}_${theme}.svg`, import.meta.url).href
}

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("img", {
    src: getBrandLogoUrl('alpha', 'light'),
    alt: "brand logo"
  }, null, 8 /* PROPS */, ["src"]))
}
}

})
