tests/snapshots/sfc/ts/patches__dynamic_component_with_v_slot_destructure.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 198
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveDynamicComponent as _resolveDynamicComponent, openBlock as _openBlock, createBlock as _createBlock, withCtx as _withCtx } from "vue"

import { RouterView } from 'vue-router'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(RouterView, null, {
    default: _withCtx(({ Component }) => [
      (_openBlock(), _createBlock(_resolveDynamicComponent(Component)))
    ]),
    _: 1 /* STABLE */
  }))
}
}

})
