tests/snapshots/sfc/ts/patches__dynamic_slot_outlet_name_in_loop.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { renderSlot as _renderSlot, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const tabs = [
  { key: 'basic', label: 'Basic' },
  { key: 'parts', label: 'Parts' },
]

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, [
    (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(tabs, (tab) => {
      return (_openBlock(), _createElementBlock(_Fragment, { key: tab.key }, [
        _renderSlot(_ctx.$slots, tab.key, { tab: tab })
      ], 64 /* STABLE_FRAGMENT */))
    }), 128 /* KEYED_FRAGMENT */))
  ]))
}
}

})
