tests/snapshots/sfc/ts/patches__es6_shorthand_in_v_bind_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { normalizeProps as _normalizeProps, guardReactiveProps as _guardReactiveProps, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const disabled = ref(false)
const type = ref('button')

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", _normalizeProps(_guardReactiveProps({ disabled: disabled.value, type: type.value })), "Click", 16 /* FULL_PROPS */))
}
}

})
