tests/snapshots/sfc/ts/patches__es6_shorthand_mixed_with_regular_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveComponent as _resolveComponent, openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const name = ref('test')

return (_ctx: any,_cache: any) => {
  const _component_MyComponent = _resolveComponent("MyComponent")

  return (_openBlock(), _createBlock(_component_MyComponent, { options: { name: name.value, extra: 'value' } }, null, 8 /* PROPS */, ["options"]))
}
}

})
