tests/snapshots/sfc/ts/patches__generic_function_call_should_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue"

import { useStore } from 'vuex'

interface RootState {
  count: number
}


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const store = useStore<RootState>()

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(store).state.count), 1 /* TEXT */))
}
}

})
