tests/snapshots/sfc/ts/patches__hyphenated_component_in_v_if_v_else_chain.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { resolveComponent as _resolveComponent, openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, createTextVNode as _createTextVNode, withCtx as _withCtx } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const mode = ref('link')

return (_ctx: any,_cache: any) => {
  const _component_router_link = _resolveComponent("router-link")
  const _component_router_view = _resolveComponent("router-view")

  return (mode.value === 'link')
    ? (_openBlock(), _createBlock(_component_router_link, {
      key: 0,
      to: "/"
    }, {
      default: _withCtx(() => [
        _createTextVNode("Link")
      ]),
      _: 1 /* STABLE */
    }))
    : (_openBlock(), _createBlock(_component_router_view, { key: 1 }))
}
}

})
